..F....... [ZBX-10621] fixed hanging of dragged widget while updating content ..F....... [ZBX-10621] removed excessive white space in dashboard
git-svn-id: svn://svn.zabbix.com/trunk@61456 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -869,6 +869,13 @@ footer {
 .cell {
 	display: table-cell;
 	vertical-align: top;
+
+	&:last-child {
+
+		.dashbrd-widget {
+			margin: 0 0 10px 0;
+		}
+	}
 }
 
 .adm-img {
@@ -2276,18 +2283,15 @@ $form-icon-btn: (
 }
 
 // Dashboard
-.widget-placeholder {
+.dashbrd-widget-placeholder {
+	border-color: darken($body-bg-color, 6%) !important;
+	background-color: darken($body-bg-color, 6%) !important;
+}
 
-	.cell {
-		min-width: 250px;
-
-		&:last-child {
-
-			.dashbrd-widget {
-				margin: 0 0 10px 0;
-			}
-		}
-	}
+.dashbrd-widget-draggable {
+	border-color: $action-border-color !important;
+	border-bottom-color: darken($action-border-color, 1%) !important;
+	@include box-shadow(0 4px 20px 0 $action-shadow-color);
 }
 
 .dashbrd-widget {
